--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,7 +13,7 @@
     <string name="error_empty_content">Контент не может быть пустым</string>
     <string name="chooser_share_post">Поделиться</string>
     <string name="add_post">Добавить пост</string>
-    <string name="retry_loading">Повторить</string>
+    <string name="retry_loading">Повторить загрузку</string>
     <string name="empty_posts">Постов нет.\nЕсли создадите новый пост, то он появится здесь</string>
     <string name="error_loading">Что-то пошло не так. Попробуйте позднее</string>
     <string name="save">Сохранить</string>
@@ -23,4 +23,5 @@
     <string name="channel_remote_description">Уведомления с удалённого сервера</string>
     <string name="network_error">ошибка сети</string>
     <string name="unknown_error">неизвестная ошибка</string>
+
 </resources>
